--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
-envlist = py35-django1.10
+envlist = py37-django2.2
 
-[django1.10]
+[django2.2]
 deps =
-    Django>=1.10,<1.11
+    Django==2.2.*
 
 [testenv]
 commands = {envbindir}/django-admin.py test {posargs:tests}
@@ -11,10 +11,10 @@ setenv =
     DJANGO_SETTINGS_MODULE = tests.settings
     PYTHONPATH = {toxinidir}
 
-[testenv:py35-django1.10]
-basepython = python3.5
+[testenv:py37-django2.2]
+basepython = python3.7
 deps =
-    {[django1.10]deps}
+    {[django2.2]deps}
     elasticsearch>=5.0.0,<6.0.0
-    django-haystack==2.5.0
+    django-haystack==2.8.*
     ipdb>=0.10
